--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,15 +1,10 @@
+function moyenne($a, $b)
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "type": "pwa-chrome",
-            "request": "launch",
-            "name": "Launch Chrome against localhost",
-            "url": "http://localhost:8080",
-            "webRoot": "${workspaceFolder}"
-        }
-    ]
+
+$c = ($a + $b) / 2;
+return $c;
+
 }
+
+$resultat = moyenne(14, 12);
+echo $resultat;
